# Blucast

./: Containerfile  README.md  firefox_fix.md  install.sh  run.sh
app/: CMakeLists.txt  cc_spoof.c  control_panel.py  server.cpp
scripts/: install-remote.sh  uninstall.sh
